--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,56 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: kyle.matthew.magnaye
+* Created on: Apr 2025
 * This file contains the CSS for index.html
 */
+body {
+  background: lightblue;
+}
+
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: lightgreen;
+}
+
+.page-content {
+  color: rgb(186, 34, 34);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+img {
+  float: right;
+  height: 200px;
+}
+
+.temperature-row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.temperature-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.unit-label {
+  margin-top: 4px;
+  font-size: 0.9em;
+  color: #555;
+}
+
+.equals-sign {
+  font-weight: bold;
+  font-size: 1.5em;
+}
